# speech-transcriber

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  env.py  errors.py  main.py  pyproject.toml  settings.py  transcribe_audio.py
tests/: test_save_file.py  test_transcribe_audion.py
