[tool.poetry]
name = "Speech transcriber"
version = "0.2.0"
description = "Transcribes audio file"
authors = ["Eugene Smith <eugeny.kuz@gmail.com>"]
license = "Proprietary"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.13"
assemblyai = "^0.26.0"
python-dotenv = "^1.0.1"
tomli-w = "^1.0.0"
filetype = "^1.2.0"
crossfiledialog = "^0.2.0"
pywin32 = {version="^306", platform = "win32"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest = "^8.2.1"
flake8-bugbear = "^24.4.26"
pre-commit = "^3.7.1"


[tool.poetry.group.build.dependencies]
pyinstaller = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"
